--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,14 +17,16 @@ website:
     left:
       - text: "Projects"
         href: projects/index.qmd
-      - text: "Photography"
-        href: photography/index.qmd
+#      - text: "Photography"
+#        href: photography/index.qmd
       - text: "Experience"
         href: experience/index.qmd
-      - text: "CV"
-        href: cv/index.qmd
+      - text: "Education"
+        href: education/index.qmd
       - text: "Publication"  # Replace with your desired navigation item text
         href: "https://scholar.google.com/citations?user=Zr7A_v4AAAAJ&hl=en" 
+      - text: "CV"
+        href: cv/index.qmd
         
     
     # your social media handles
