--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,7 +24,7 @@ website:
       - text: "Education"
         href: education/index.qmd
       - text: "Presentation"
-        href: Presentation/index.qmd
+        href: presentation/index.qmd
       - text: "Publication"  # Replace with your desired navigation item text
         href: "https://scholar.google.com/citations?user=Zr7A_v4AAAAJ&hl=en" 
       - text: "CV"
